--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,5 +1,5 @@
 header{
-	background-image: url("https://img.freepik.com/free-photo/beige-concrete-textured-background_53876-110257.jpg?size=626&ext=jpg&ga=GA1.1.1244428762.1685267429&semt=ais");
+	background-image: url("https://fujita-museum.or.jp/wp/wp-content/uploads/2021/02/64a66a63b5b92ca228059caf48425e37-1.jpg");
 	background-size: cover;
 	-webkit-writing-mode: vertical-rl;
 	-ms-writing-mode: tb-rl;
@@ -16,7 +16,7 @@ header{
       font-family: serif;
       text-orientation: upright;
       padding:30px 80px 0px 0px;
-      font-size:50px;
+      font-size:45px;
     }
     
     
