--- a/src/main/resources/templates/passwordReset.html
+++ b/src/main/resources/templates/passwordReset.html
@@ -9,7 +9,10 @@
 
 <body>
 	<h3>パスワード再設定</h3><br>
-	<span th:if="${errorMessage}" th:text="${errorMessage}"></span>
+	<div class="error">
+		<span th:if="${errorMessage}" th:text="${errorMessage}"></span>
+	</div>
+	
 	 <form action="/passwordReset" method="post">
           名前を入力してください<br>
           <input type="name" name="name"><br>
