--- a/src/main/resources/static/css/newDiary.css
+++ b/src/main/resources/static/css/newDiary.css
@@ -1,66 +1,41 @@
+body{
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  padding: 30px;
+  font-family:serif; /* テキストのフォントを明朝体に設定 */
+  background-image: url("https://t4.ftcdn.net/jpg/05/30/07/85/240_F_530078511_ip4qrkfOSY9MaTHd5AvsITR1khBFtcVd.jpg");
+　background-size: cover;
+}
 
-/*body {		  -ms-writing-mode: tb-rl;*/
-/*  writing-mode: vertical-rl;*/
-/*  padding: 30px;*/
-/*			font-family: "MS Mincho", serif;  テキストのフォントを明朝体に設定 */
-/*			background-color: #f2ece6;  背景色を設定 */
-/*		}*/
-
-/*		form {*/
-/*			text-align: center;  フォーム内のテキストを中央揃えにする */
-/*			padding: 20px;*/
-/*		}*/
-
-/*		.vertical-input {*/
-/*			border: none;*/
-/*			border-bottom: 1px solid #ccc;*/
-/*			margin-bottom: 10px;*/
-/*			text-align: center;  テキストを中央揃えにする */
-/*			width: 300px;*/
-/*			height: 30px;*/
-/*			display: inline-block;*/
-/*			vertical-align: middle;*/
-/*			writing-mode: vertical-rl;*/
-/*  -webkit-writing-mode: vertical-rl;*/
-/*  -ms-writing-mode: vertical-rl;*/
-/*  	line-height: 22px;*/
-/*  background: linear-gradient(to bottom, #eee 1px, white 1px);*/
-/*  background-size: 100% 20px;*/
-/*  background-origin: content-box;*/
-/*  background-attachment: local;*/
-/*  font-family: serif;*/
-/*  letter-spacing: 0.05em;*/
-/*	border: none;*/
-/*	font-size:120%;*/
-/*	 text-orientation: upright;*/
-/*	 font-size: 100%;*/
-/*		}*/
-
-/*		.vertical-textarea {*/
-/*			border: none;*/
-/*			border-bottom: 1px solid #ccc;*/
-/*			margin-bottom: 10px;*/
-/*			text-align: center;  テキストを中央揃えにする */
-/*			width: 300px;*/
-/*			height: 100px;*/
-/*			display: inline-block;*/
-/*			vertical-align: middle;*/
-/*			writing-mode: vertical-rl;*/
-/*  -webkit-writing-mode: vertical-rl;*/
-/*  -ms-writing-mode: vertical-rl;*/
-/*  font-size: 100%;*/
-/*line-height: 20px;*/
-/*  background: linear-gradient(to bottom, #eee 1px, white 1px);*/
-/*  background-size: 100% 20px;*/
-/*  background-origin: content-box;*/
-/*  background-attachment: local;*/
-/*  font-family: serif;*/
-/*  letter-spacing: 0.05em;*/
-/*  border: none;*/
-/*  width	: 800px;*/
-/*   text-orientation: upright;*/
-/*		}*/
-
-/*		button {*/
-/*			margin-top: 10px;*/
-/*		}*/
+.vertical-input{
+  writing-mode: vertical-rl;
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: vertical-rl;
+  	line-height: 22px;
+  background: linear-gradient(to bottom, #eee 1px, white 1px);
+  background-size: 100% 20px;
+  background-origin: content-box;
+  background-attachment: local;
+  font-family: serif;
+  letter-spacing: 0.05em;
+	border: none;
+	font-size:100%;
+	 text-orientation: upright;
+	 
+}
+.vertical-textarea{
+	writing-mode: vertical-rl;
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: vertical-rl;
+  font-size: 119%;
+line-height: 20px;
+  background: linear-gradient(to bottom, #eee 1px, white 1px);
+  background-size: 100% 20px;
+  background-origin: content-box;
+  background-attachment: local;
+  font-family: serif;
+  letter-spacing: 0.05em;
+  border: none;
+  width	: 800px;
+   text-orientation: upright;
+}
