--- a/src/main/resources/static/css/passwordReset.css
+++ b/src/main/resources/static/css/passwordReset.css
@@ -3,14 +3,18 @@
 body {
     font-family: serif;
   background-color: #f2f2f2;
-  background-image: url("https://img.freepik.com/free-vector/new-year-card-vector-template-decorated-with-abstract-watercolor-painting_8130-1462.jpg?w=740&t=st=1685267437~exp=1685268037~hmac=dd23a3b0296a1898c4296a11a4685f6adf1e1ba0d9907cf0dbf5d3b903e1d1f6");
+  background-image: url("https://thumb.photo-ac.com/56/568ae7fea6d913e7914f6646adf83999_t.jpeg");
 　background-size: cover;
+}
+
+.error{
+	 text-align: center;
 }
 
 h3 {
   text-align: center;
   margin-top: 20px;
-  font-size:30px;
+  font-size:40px;
 }
 
 form {
@@ -24,7 +28,7 @@ form {
 
 form input[type="name"],
 form input[type="email"] {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -39,7 +43,7 @@ form button {
   border: none;
   border-radius: 3px;
   cursor: pointer;
-  background-image: url("https://img.freepik.com/free-photo/beige-concrete-textured-background_53876-110257.jpg?size=626&ext=jpg&ga=GA1.1.1244428762.1685267429&semt=ais");
+  background-image: url("https://img.freepik.com/free-vector/new-year-card-vector-template-decorated-with-japanese-vintage-abstract-patterns_8130-1457.jpg?size=626&ext=jpg&ga=GA1.1.1244428762.1685267429&semt=ais");
 
 }
 
@@ -54,4 +58,4 @@ form a {
 span {
   color: red;
 }
-
+zz
