--- a/src/main/resources/templates/allDiary.html
+++ b/src/main/resources/templates/allDiary.html
@@ -6,8 +6,12 @@
 <link rel="stylesheet" href="/css/allDiary.css">
 </head>
 <body>
-	本日の季語<br>
-	[[${kigo.name}]]:[[${kigo.meaning}]]
+	<div>
+	<span>本日の季語<br></span>
+	<span>[[${kigo.name}]]:[[${kigo.meaning}]]</span>
+	</div>
+	
+	
     <table class="detail">
 		<tr>
 			<th>日付</th>
@@ -17,12 +21,28 @@
 		<tr th:each="diary:${diaries}">
 			<td th:text="${diary.nowDate}"></td>
 			<td th:text="${diary.weather}"></td>
-			<td><a th:href ="@{/create/diary(year=${year},month=${month},day=${day})}">[[${diary.title}]]</a></td> 
+			<td><a th:href ="'/diary/'+${diary.id}+'/edit'">[[${diary.title}]]</a></td> 
 		</tr>
 	</table>
+	 
 	<form action="/calendar">
 		<button>戻る</button>
 	</form>
-
+	
+	
+	<span>お気に入りの日記</span>
+	 <table class="detail">
+		<tr>
+			<th>日付</th>
+			<th>気候</th>
+			<th>タイトル</th>
+		</tr>
+		</tr>
+                <tr th:each="favorite : ${favoriteList}">
+                <td><span th:text="${favorite.nowDate}"></span></td>
+                <td><span th:text="${favorite.title}"></span></td>
+                <td><span th:text="${favorite.content}"></span></td>
+            </tr>
+	</table>
 </body>
 </html>
