--- a/src/main/resources/templates/newPassword.html
+++ b/src/main/resources/templates/newPassword.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8">
 	<title>パスワード再設定</title>
 	<link rel="stylesheet" href="/css/newPassword.css">
 </head>
+
 <body>
+	
+	
+	<ul th:if="${errorMessages.size() > 0}" th:each="error:${errorMessages}"  th:class="errorList">
+		<li>[[${error}]]</li>
+	</ul>
+	
 	<form action="/setPassword" method="post">
 		名前:<br>
 		[[${user.name}]]<br>
 		メールアドレス<br>
 		[[${user.email}]]<br>
-		
+
 		<label for="input_pass">パスワード</label><br>
 		<input type="password" name="password" id="input_pass">
 		<button id="btn_passview1">表示</button><br>
-		
+
 		<label for="input_confirm">確認用パスワード</label><br>
 		<input type="password" name="confirmpassword" id="input_confirm">
 		<button id="btn_passview2">表示</button><br>
-		
 		<input type="hidden" name="name" th:value="${user.name}">
 		<input type="hidden" name="email" th:value="${user.email}">
 		<input type="hidden" name="id" th:value="${user.id}">
@@ -62,4 +69,5 @@
 		});
 	</script>
 </body>
+
 </html>
