--- a/src/main/resources/static/css/allDiary.css
+++ b/src/main/resources/static/css/allDiary.css
@@ -3,7 +3,7 @@ body {
   padding: 20px;
   font-family: serif;
   background-color: #f2f2f2;
-   background-image: url("https://t4.ftcdn.net/jpg/05/30/07/85/240_F_530078511_ip4qrkfOSY9MaTHd5AvsITR1khBFtcVd.jpg");
+  background-image: url("https://thumb.photo-ac.com/56/568ae7fea6d913e7914f6646adf83999_t.jpeg");
 　background-size: cover;
 }
 
