--- a/src/main/resources/static/css/diaryDetail.css
+++ b/src/main/resources/static/css/diaryDetail.css
@@ -2,17 +2,17 @@ body{
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
   padding: 30px;
-  font-family: "MS Mincho", serif; /* テキストのフォントを明朝体に設定 */
-  background-image: url("https://img.freepik.com/free-vector/new-year-card-vector-template-decorated-with-abstract-watercolor-painting_8130-1462.jpg?w=740&t=st=1685267437~exp=1685268037~hmac=dd23a3b0296a1898c4296a11a4685f6adf1e1ba0d9907cf0dbf5d3b903e1d1f6");
-　background-size: cover;		
+  font-family:serif; /* テキストのフォントを明朝体に設定 */
+  background-image: url("https://thumb.photo-ac.com/56/568ae7fea6d913e7914f6646adf83999_t.jpeg");
+　background-size: cover;	
 }
 h1 {
   font-size: 30px;
   margin-left: 20px;
-    margin-right: 0;
- margin-left: auto;
- font-family: serif;
- background:
+  margin-right: 0;
+  margin-left: auto;
+  font-family: serif;
+  background:
   radial-gradient(circle at top left, transparent 50%, #999 50%, #999 calc(50% + 2px), transparent calc(50% + 2px)),
   radial-gradient(circle at top right, transparent 50%, #999 50%, #999 calc(50% + 2px), transparent calc(50% + 2px)),
   radial-gradient(circle at bottom left, transparent 50%, #999 50%, #999 calc(50% + 2px), transparent calc(50% + 2px)),
