--- a/src/main/resources/static/css/newPassword.css
+++ b/src/main/resources/static/css/newPassword.css
@@ -7,10 +7,16 @@ body {
 　background-size: cover;
 }
 
-.errorList{
-	text-align: center;
-	color:red;
-}
+	.errorList {
+		text-align: center;
+		color: red;
+		list-style-position: inside;
+		padding: 0;
+	}
+
+	.errorList li {
+		display: inline-block;
+	}
 
 form {
   max-width: 400px;
