--- a/src/main/resources/templates/detailDiary.html
+++ b/src/main/resources/templates/detailDiary.html
@@ -9,9 +9,9 @@
 
 <body>
 	<div class="note">
-		<h1>題名:
+		<h1>題名
 			[[${diary.title}]]</h1>
-		<p>内容:<br>
+		<p class="content">内容<br>
 			[[${diary.content}]]</p>
 	</div>
 
@@ -30,7 +30,6 @@
 			<button class="distorted-circle3">戻る</button>
 		</form>
 	</div>
-	<a href="/logout">ログアウト</a>
 </body>
 
 </html>
