--- a/src/main/resources/templates/editDiary.html
+++ b/src/main/resources/templates/editDiary.html
@@ -38,7 +38,7 @@
 		<input type="hidden" name="weather" th:value="${diary.weather}">
 
 
-		<button type="button" onclick="submitForm()">更新</button>
+		<button type="button" onclick="submitForm()">投稿</button>
 	</form>
 </body>
 
