--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -9,25 +9,40 @@
             width: 100%;
             text-align: center;
         }
-		.logout{
-			text-align: right;
-		}
 
         h1 {
             font-family: serif;
             font-size: 45px;
         }
 		
+		.moonTransition{
+			text-align:center;
+		}
 		
+		.button-link {
+        border: none;
+        background: none;
+        padding: 0;
+        font: inherit;
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer;
+        margin-left:40px;
+    }
+    
 		.content{
 		writing-mode: vertical-rl; /* 縦書きに設定 */
  		 text-orientation: upright; /* 縦書きテキストの方向を設定 */
   		white-space: pre-wrap; /* 空白で改行させるための設定 */	
 		}
 		
+		.allDiary{
+			text-align:center;
+		}
+		
 		.month{
 			text-align: center;
-			font-size:20px;
+			font-size:25px;
 		}
         /* テーブル全体のスタイル */
         table {
@@ -96,4 +111,9 @@
 			color: #333;
             text-decoration: none;
             font-family: serif;
+		}
+		
+		.link{
+			text-align:right;
+			margin-right:40px;
 		}
