--- a/src/main/resources/static/css/newDiary.css
+++ b/src/main/resources/static/css/newDiary.css
@@ -7,6 +7,16 @@ body{
 　background-size: cover;	
 }
 
+h3{
+	font-family: serif;
+	font-size:30px;
+}
+
+.date{
+	font-family: serif;
+	text-orientation: upright;
+	
+}
 .vertical-input{
   writing-mode: vertical-rl;
   -webkit-writing-mode: vertical-rl;
@@ -19,7 +29,7 @@ body{
   font-family: serif;
   letter-spacing: 0.05em;
 	border: none;
-	font-size:100%;
+	font-size:120%;
 	 text-orientation: upright;
 	 
 }
@@ -38,4 +48,12 @@ line-height: 20px;
   border: none;
   width	: 800px;
    text-orientation: upright;
+}
+
+button{
+	width:3em; height:10em;
+border: dashed 1px #906e84;
+border-radius: 10px;
+cursor: pointer;
+background-color: #eee;
 }
